@@ -4,7 +4,7 @@ import org.junit.jupiter.api.Test;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.Objects;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -12,28 +12,24 @@ class EpicTest {
 
     @Test
     void epicTimeFieldsShouldBeCalculatedFromSubtasks() {
-        Epic epic = new Epic("Epic title", "Epic description");
-        epic.setId(1);
+        Epic epic = new Epic("Эпик", "Описание");
 
-        Subtask sub1 = new Subtask("sub1", "desc", TaskStatus.NEW,
-                Duration.ofMinutes(30), LocalDateTime.of(2024, 6, 1, 10, 0), 1);
-        sub1.setId(2);
+        Subtask sub1 = new Subtask("Подзадача 1", "Описание", TaskStatus.NEW,
+                Duration.ofMinutes(30), LocalDateTime.of(2024, 6, 1, 10, 0), epic.getId());
+        Subtask sub2 = new Subtask("Подзадача 2", "Описание", TaskStatus.NEW,
+                Duration.ofMinutes(90), LocalDateTime.of(2024, 6, 1, 12, 0), epic.getId());
 
-        Subtask sub2 = new Subtask("sub2", "desc", TaskStatus.NEW,
-                Duration.ofMinutes(90), LocalDateTime.of(2024, 6, 1, 12, 0), 1);
-        sub2.setId(3);
-
-        epic.updateTimeFields(List.of(sub1, sub2));
+        epic.updateTimeFields(java.util.List.of(sub1, sub2));
 
         assertEquals(Duration.ofMinutes(120), epic.getDuration());
         assertEquals(LocalDateTime.of(2024, 6, 1, 10, 0), epic.getStartTime());
-        assertEquals(LocalDateTime.of(2024, 6, 1, 13, 30), epic.getEndTime());
+        assertEquals(LocalDateTime.of(2024, 6, 1, 13, 30), epic.getEndTime()); // 12:00 + 1.5ч
     }
 
     @Test
     void epicWithNoSubtasksShouldHaveZeroDurationAndNullTimes() {
-        Epic epic = new Epic("Empty Epic", "No subtasks");
-        epic.updateTimeFields(List.of());
+        Epic epic = new Epic("Эпик", "Описание");
+        epic.updateTimeFields(java.util.Collections.emptyList());
 
         assertEquals(Duration.ZERO, epic.getDuration());
         assertNull(epic.getStartTime());
@@ -42,16 +38,8 @@ class EpicTest {
 
     @Test
     void equalsAndHashCodeShouldIncludeTimeFields() {
-        Epic epic1 = new Epic("Title", "Desc");
-        epic1.setId(1);
-        Epic epic2 = new Epic("Title", "Desc");
-        epic2.setId(1);
-
-        Subtask sub1 = new Subtask("Sub", "Desc", TaskStatus.NEW,
-                Duration.ofMinutes(30), LocalDateTime.of(2023, 1, 1, 10, 0), 1);
-
-        epic1.updateTimeFields(List.of(sub1));
-        epic2.updateTimeFields(List.of(sub1));
+        Epic epic1 = new Epic("Эпик", "Описание");
+        Epic epic2 = new Epic("Эпик", "Описание");
 
         assertEquals(epic1, epic2);
         assertEquals(epic1.hashCode(), epic2.hashCode());
